@@ -2,51 +2,55 @@ package com.youcode.systemepointage.service;
 
 import com.youcode.systemepointage.dao.GenericDAO;
 import com.youcode.systemepointage.dao.PointageDAOImp;
-import com.youcode.systemepointage.model.Etudiant;
 import com.youcode.systemepointage.model.Pointage;
 import com.youcode.systemepointage.model.Promotion;
 import com.youcode.systemepointage.model.Utilisateur;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 public class PointageService {
     private final GenericDAO<Pointage, Integer> pointageDAO = new PointageDAOImp();
+    private final EtudiantService etudiantService = new EtudiantService();
 
     public Pointage pointer(Utilisateur utilisateur){
         return pointageDAO.create(
                 Pointage.builder()
-                .utilisateur(utilisateur)
-                .dateEtHeure(LocalDateTime.now())
-                .build()
+                        .utilisateurId(utilisateur.getId())
+                        .dateEtHeure(LocalDateTime.now())
+                        .build()
         );
     }
 
-    public Collection<Pointage> parUtilisateur(Utilisateur utilisateur){
-        return pointageDAO.findAll().parallelStream()
-                .filter(pointage -> pointage.getUtilisateur().getId() == utilisateur.getId())
+    public Collection<Pointage> parUtilisateur(Utilisateur utilisateur) {
+        return pointageDAO.findAll().stream().parallel()
+                .filter(pointage -> pointage.getUtilisateurId().equals(utilisateur.getId()))
                 .toList();
     }
 
-    public Collection<Pointage> etudiantParPromotion(Promotion promotion){
-        return pointageDAO.findAll().parallelStream()
-                .filter(pointage -> ((Etudiant) pointage.getUtilisateur())
-                        .getPromotion().getId() == promotion.getId())
-                .toList();
+    public Collection<Pointage> etudiantParPromotion(Promotion promotion) {
+        return etudiantService.trouverTous().stream().parallel()
+                .filter(etudiant -> etudiant.getPromotionId().equals(promotion.getId()))
+                .map(etudiant -> pointageDAO.findAll().stream().parallel().filter(pointage -> pointage.getUtilisateurId().equals(etudiant.getId()))
+                        .collect(Collectors.toList())).flatMap(Collection::stream).toList();
+
     }
 
-    public boolean supprimer(Pointage pointage){
+    public boolean supprimer(Pointage pointage) {
         return pointageDAO.delete(pointage.getId());
     }
 
-    public Pointage modifier(Pointage pointage){
+    public Pointage modifier(Pointage pointage) {
         return pointageDAO.update(pointage);
     }
 
     public Pointage trouverParId(int id) {
         return pointageDAO.find(id)
-                .orElseThrow(() -> new RuntimeException("Pointage non trouvé"));
+                .orElse(null);
+    }
+
+    public Collection<Pointage> trouverTous() {
+        return pointageDAO.findAll();
     }
 }
